tests/snapshots/keys__keys_ctrl_h@002.snap
---
source: tests/keys.rs
description: "input: items [\"\"]\noptions: -q foo bar foo-bar\nafter:\n  @ctrl 'h'\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> foo bar foo-ba|                                                               "
cursor: (24, 18)
